# metis-sdk

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  Makefile  README.md
.cargo/: config.toml
.github/: dependabot.yaml
.github/assets/hive/: Dockerfile  build_simulators.sh  expected_failures.yaml  ignored_tests.yaml  load_images.sh  run_simulator.sh
.github/release/: cl.Dockerfile
.github/workflow/: ci.yaml
.github/workflows/: bench.yaml  blocktest.yaml  ci.yaml  eelstest.yaml  ethertest.yaml  hive.yml  image.yaml  k8s.yaml  lint.yaml  pr-check.yaml  prepare-metis.yml  release.yaml  rpctest.yaml  stage.yaml  synctest.yaml  typos.yaml  unit.yaml  windows.yaml
crates/app/: Cargo.toml
crates/app/examples/: abci_kvstore_app.rs
crates/app/options/: Cargo.toml
crates/app/options/src/: eth.rs  genesis.rs  key.rs  lib.rs  rpc.rs  run.rs
crates/app/src/: app.rs  lib.rs  main.rs  store.rs
crates/app/src/abci/: app.rs
crates/app/src/cmd/: key.rs  mod.rs  rpc.rs  run.rs
crates/app/src/settings/: mod.rs
crates/chain/: Cargo.toml  Makefile  README.md  build.rs
crates/chain/src/: exex.rs  lib.rs  op_provider.rs  provider.rs  state.rs
crates/chain/src/tm_abci/: abci_app.rs  mod.rs
crates/chain/tests/: parallel_evm_node.rs  receipt.rs  sequential_evm_node.rs  withdraw.rs
crates/chain/tests/common/: keypair.rs  mod.rs  node.rs  tx.rs
crates/db/: Cargo.toml  README.md
crates/optimism/: Cargo.toml
crates/optimism/src/: exex.rs  lib.rs
crates/pe/: Cargo.toml  README.md
crates/pe/benches/: README.md  gigagas.rs
crates/pe/src/: db.rs  dropper.rs  executor.rs  lib.rs  mv_memory.rs  op_executor.rs  op_vm.rs  result.rs  scheduler.rs  types.rs  vm.rs
crates/pe/tests/: LICENSE  README.md  beneficiary.rs  mixed.rs  raw_transfers.rs  small_blocks.rs
crates/pe/tests/common/: mod.rs  runner.rs  storage.rs
crates/pe/tests/erc20/: contract.rs  main.rs  mod.rs
crates/pe/tests/uniswap/: contract.rs  main.rs  mod.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: i257.rs  lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: client.rs  client_api.rs  lib.rs  tx.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tools/: .gitignore  Cargo.toml  README.md
crates/tools/bins/abcitest/: main.rs
crates/tools/bins/blockfetch/: main.rs
crates/tools/bins/blocktest/: main.rs
crates/tools/bins/blocktrace/: main.rs
crates/tools/bins/eelstest/: main.rs
crates/tools/bins/ethertest/: main.rs
crates/tools/data/blocks/: 18920116.json  18925609.json  19031572.json  49439.json  issue208.json
crates/tools/src/: lib.rs
crates/vm/: Cargo.toml  README.md  build.rs
crates/vm/docs/: dev.md  on-chain-llm.md
crates/vm/examples/: aot_compiler.rs  inference.rs  interpreter.rs  jit_compiler.rs
crates/vm/src/: compiler.rs  env.rs  error.rs  inference.rs  lib.rs  pool.rs  runtime.rs  tests.rs
crates/vm/src/interpreter/: mod.rs
crates/vm/src/interpreter/evm/: check.rs  mod.rs
crates/vm/src/interpreter/evm/state/: exec.rs  genesis.rs  mod.rs  query.rs
crates/vm/src/interpreter/evm/store/: block.rs
crates/vm/src/interpreter/state/: exec.rs
crates/vm/src/interpreter/store/: block.rs  externs.rs  mod.rs
crates/vm_lib/: Cargo.toml
crates/vm_lib/src/: error.rs  lib.rs  message.rs
devops/: README.md  compose-mala.yaml  compose.yaml  start_node.sh  stop_node.sh
devops/configs/assets/: genesis.json
devops/configs/node/config/: config.toml  priv_validator_key.json
devops/k8s/: genesis-configmap.yaml  ingress.yaml  kustomization.yaml  service.yaml
devops/k8s/node1/: kustomization.yaml  node_configs.yaml  reth-pvc.yaml  service.yaml  statefulset.yaml
devops/k8s/node2/: kustomization.yaml  node_configs.yaml  reth-pvc.yaml  service.yaml  statefulset.yaml
devops/k8s/node3/: node_configs.yaml  reth-pvc.yaml  service.yaml  statefulset.yaml
docs/: CONTRIBUTING.md
example/: README.md  compose.yaml
example/configs/node/config/: app_config.toml
example/test-local-chain/: .start_metis_localnet.sh.swp  add_peers.sh  malachite_nodes.sh
example/test-local-chain/from_bin/: start_metis_localnet.sh
example/test-local-chain/from_docker/: Dockerfile  compose-mala.yaml  compose.yaml  start_metis_localnet.sh  stop_and_clean.sh
example/test-local-chain/from_docker/assets/: jwtsecret
example/test-local-chain/from_docker/nodes_config_bin/0/config/: app_config.toml  (+1 more)
script/: README.md  add_peers.sh  malachite_nodes.sh  metis_nodes.sh  start_metis_localnet.sh  stop_and_clean.sh
website/: .gitignore  README.md  bun.lockb  next.config.mjs  package.json  source.config.ts  tailwind.config.js
website/app/: global.css  layout.config.tsx  layout.tsx  manifest.json
website/app/[[...slug]]/: page.tsx
website/app/api/auth/[...nextauth]/: route.ts
website/app/og/[...slug]/: og.tsx  route.tsx
website/content/docs/: faq.mdx  index.mdx  meta.json  start.mdx  start_with_consensuse.mdx
website/content/docs/architecture/: ai_exex.mdx  ch.mdx  db.mdx  index.mdx  meta.json  pe.mdx  vm.mdx
website/content/docs/architecture/overview/: ai-exex.mdx  ch.mdx  index.mdx  meta.json  mvmemory.mdx  pe.mdx  peb.mdx  scheduler.mdx  vmdb.mdx
website/content/docs/dapp/: meta.json
website/content/docs/dapp/infra/: meta.json  monitoring.mdx  rpcs.mdx
website/content/docs/dapp/start/: environment.mdx  meta.json  tutorials.mdx
website/content/docs/network/: audits.mdx  faq.mdx  meta.json
website/content/docs/network/contracts/: meta.json  predeploys.mdx  preinstalls.mdx
website/content/docs/sequencer/: meta.json
website/content/docs/sequencer/architecture/: bridge.mdx  finality.mdx  index.mdx  locking.mdx  meta.json  mpc.mdx  pe.mdx  rotation.mdx  sequencer.mdx  transaction.mdx  vm.mdx
website/content/docs/sequencer/operation/: faq.mdx  guide.mdx  index.mdx  meta.json  natspec.mdx  requirements.mdx
website/lib/: config.ts  const.ts  metadata-image.ts  metadata.ts  queries.ts  source.ts
website/lib/rainbowkit/: auth.ts
website/lib/thirdweb/: client.ts  login.ts
(+11 files in other folders)
