[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = "warn"
rust.unreachable_pub = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
redundant_else = "warn"
type_repetition_in_bounds = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[workspace.dependencies]
metis-vm = { path = "crates/vm" }
metis-primitives = { path = "crates/primitives" }
metis-pe = { path = "crates/pe" }
metis-chain = { path = "crates/chain" }

anyhow = "1.0.97"

# alloy
alloy-consensus = "0.14.0"
alloy-primitives = { version = "1.0.0", features = [
  "asm-keccak",
  "map-fxhash",
] }
alloy-sol-types = { version = "1.0.0", default-features = false, features = [
    "std",
] }
alloy-eips = { version = "0.14.0", default-features = false }
alloy-provider = "0.14.0"
alloy-rlp = "0.3.10"
alloy-rpc-types-eth = "0.14.0"
alloy-transport = "0.14.0"
alloy-transport-http = "0.14.0"
alloy-hardforks = "0.2.0"
alloy-trie = { version = "0.8.1", default-features = false }
alloy-signer = { version = "0.14.0", default-features = false }
alloy-signer-local = { version = "0.14.0", default-features = false }
alloy-evm = "0.4.0"
alloy-genesis = "0.14.0"

revm = { version = "22.0.0", features = ["std", "serde-json"] }

# Reth dependencies
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9", features = ["full"] }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.9" }

# Allocators
tikv-jemallocator = "0.6.0"

bincode = "1.3.3"
bitflags = "2.7.0"
bitvec = "1.0.1"
clap = { version = "4.5.34", features = ["derive"] }
color-eyre = "0.6.3"
criterion = "0.5.1"
dashmap = "6.1.0"
flate2 = "1.0.35"
hashbrown = "0.15.2"
rand = "0.9.0"
rayon = "1.10.0"
reqwest = "0.12.12"
rustc-hash = "2.1.1"
serde = "1.0.217"
serde_json = "1.0.135"
smallvec = "1.13.2"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
walkdir = "2.5.0"
crossbeam = "0.8.4"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
exclude = [".github/"]
license = "Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
rpath = true
panic = "unwind"
