[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = "warn"
rust.unreachable_pub = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
redundant_else = "warn"
type_repetition_in_bounds = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[workspace.dependencies]
metis-vm = { path = "crates/vm" }
metis-primitives = { path = "crates/primitives" }
metis-pe = { path = "crates/pe" }
metis-chain = { path = "crates/chain" }

anyhow = "1.0.97"

# Alloy and Revm dependencies
alloy-consensus = "0.14.0"
alloy-primitives = { version = "1.0.0", features = [
  "asm-keccak",
  "map-fxhash",
] }
alloy-sol-types = { version = "1.0.0", default-features = false, features = [
  "std",
] }
alloy-eips = { version = "0.14.0", default-features = false }
alloy-provider = { version = "0.14.0", features = [
  "reqwest",
], default-features = false }
alloy-rlp = { version = "0.3.11", features = ["arrayvec"] }
alloy-rpc-types-eth = "0.14.0"
alloy-transport = "0.14.0"
alloy-transport-http = { version = "0.14.0", features = [
  "reqwest-rustls-tls",
], default-features = false }
alloy-hardforks = "0.2.0"
alloy-trie = { version = "0.8.1", default-features = false }
alloy-signer = { version = "0.14.0", default-features = false }
alloy-signer-local = { version = "0.14.0", default-features = false }
alloy-evm = "0.5.0"
alloy-genesis = "0.14.0"
revm = { version = "22.0.1", features = ["std", "serde-json"] }

# OP Alloy and OP Revm dependencies
op-alloy-consensus = { version = "0.15.5" }
op-alloy-network = { version = "0.14.1" }
op-alloy-rpc-types = { version = "0.15.2" }
op-revm = { version = "3.0.2" }

# Reth dependencies
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", features = [
  "full",
] }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", features = [
  "test-utils",
] }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

# Reth test dependencies
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

# Revmc dependencies
revmc = { git = "https://github.com/paradigmxyz/revmc", features = [
  "llvm-prefer-dynamic",
] }
revmc-build = { git = "https://github.com/paradigmxyz/revmc" }

# Allocators
tikv-jemallocator = "0.6.0"

# AI Inference dependencies
alith = { git = "https://github.com/0xLazAI/alith", tag = "v0.5.1", features = [
  "llamacpp",
] }

# Other dependencies
tracing = "0.1.41"
bincode = "1.3.3"
bitflags = "2.7.0"
bitvec = "1.0.1"
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.3"
criterion = "0.5.1"
dashmap = "6.1.0"
flate2 = "1.0.35"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "json",
] }
rustc-hash = "2.1.1"
serde = "1.0.217"
serde_json = "1.0.140"
smallvec = "1.14.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
walkdir = "2.5.0"
crossbeam = "0.8.4"
futures = "0.3"
futures-util = "0.3.31"
eyre = "0.6"
actix-web = "4.10.2"
num_cpus = "1.16.0"
pretty_assertions = "1"
secp256k1 = { version = "0.30", default-features = false, features = [
  "global-context",
  "recovery",
] }
jsonrpsee = "0.24.9"
tokio-stream = "0.1.17"
hex = "0.4.3"
indicatif = "0.17"
hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8"
k256 = { version = "0.13.3", features = ["ecdsa"] }
libloading = "0.8.7"
moka = { version = "0.12.10", features = ["sync"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
exclude = [".github/"]
license = "Apache-2.0"
readme = "README.md"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
