[workspace]
members = [
  "crates/*",
  "crates/app/options"
]

resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = "warn"
rust.unreachable_pub = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
redundant_else = "warn"
type_repetition_in_bounds = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[workspace.dependencies]
metis-vm = { path = "crates/vm" }
metis-primitives = { path = "crates/primitives" }
metis-pe = { path = "crates/pe" }
metis-chain = { path = "crates/chain" }
metis-storage = { path = "crates/storage" }
metis-app = { path = "crates/app" }
metis-app-options = { path = "crates/app/options" }
metis-rpc = { path = "crates/rpc" }

anyhow = "1.0.97"

# Alloy and Revm dependencies
alloy-consensus = { version = "1.0.13", default-features = false }
alloy-primitives = { version = "1.2.1", default-features = false, features = [
  "asm-keccak",
  "map-foldhash",
] }
alloy-sol-types = { version = "1.2.1", default-features = false, features = [
  "std",
] }
alloy-eips = { version = "1.0.13", default-features = false }
alloy-provider = { version = "1.0.13", features = [
  "reqwest",
], default-features = false }
alloy-rlp = { version = "0.3.10", features = ["core-net"] }
alloy-rpc-types-eth = "1.0.13"
alloy-transport = "1.0.13"
alloy-transport-http = { version = "1.0.13", features = [
  "reqwest-rustls-tls",
], default-features = false }
alloy-hardforks = "0.2.11"
alloy-trie = { version = "0.9.0", default-features = false }
alloy-signer = { version = "1.0.13", default-features = false }
alloy-signer-local = { version = "1.0.13", default-features = false }
alloy-evm = { version = "0.12", default-features = false }
alloy-genesis = { version = "1.0.13", default-features = false }
revm = { version = "26.0.1", default-features = false, features = [
  "std",
  "serde-json",
] }

# OP Alloy and OP Revm dependencies
alloy-op-evm = { version = "0.12" }
op-alloy-consensus = { version = "0.18.7" }
op-alloy-network = { version = "0.18.7" }
op-alloy-rpc-types = { version = "0.18.7" }
op-revm = { version = "7.0.1" }

# Reth dependencies
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", features = [
  "full",
] }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", features = [
  "test-utils",
] }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }

# OP Reth dependencies
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }

# Reth test dependencies
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0" }

# Revmc dependencies
revmc = { git = "https://github.com/paradigmxyz/revmc", features = [
  "llvm-prefer-dynamic",
] }
revmc-build = { git = "https://github.com/paradigmxyz/revmc" }

# Allocators
tikv-jemallocator = "0.6.0"

# AI Inference dependencies
alith = { git = "https://github.com/0xLazAI/alith", tag = "v0.9.0", features = [
  "llamacpp",
] }

# Other dependencies
tracing = "0.1.41"
bincode = "1.3.3"
bitflags = "2.9.1"
bitvec = "1.0.1"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.3"
criterion = "0.5.1"
dashmap = "6.1.0"
flate2 = "1.1.2"
rand = "0.9"
# rand 8 for secp256k1
rand_08 = { package = "rand", version = "0.8" }
rayon = "1.10.0"
reqwest = { version = "0.12.20", default-features = false, features = [
  "rustls-tls",
  "json",
] }
hyper-util = { version = "0.1.14", features = ["server-auto", "client-legacy"] }
rustc-hash = "2.1.1"
serde = "1.0.217"
serde_json = "1.0.140"
smallvec = "1.15.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
walkdir = "2.5.0"
crossbeam = "0.8.4"
futures = "0.3"
futures-util = "0.3.31"
eyre = "0.6"
actix-web = "4.10.2"
num_cpus = "1.16.0"
pretty_assertions = "1"
secp256k1 = { version = "0.30", default-features = false, features = [
  "global-context",
  "recovery",
] }
jsonrpsee = "0.25.1"
indexmap = { version = "2.10.0", features = ["serde"] }

tokio-stream = "0.1.17"
hex = "0.4.3"
indicatif = "0.17"
hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8"
k256 = { version = "0.13.3", features = ["ecdsa"] }
libloading = "0.8.7"
moka = { version = "0.12.10", features = ["sync"] }
either = "1.15.0"

# comefbft abci
tendermint = "*"
tendermint-rpc = { version = "*", features = ["secp256k1", "http-client", "websocket-client"] }
async-trait = "0.1.88"
tower = "0.5.2"
tower-abci = "*"
async-stm = "0.5.0"

# app
num-derive = "*"
base64 = "0.22.1"
serde_with = "*"
config = "*"
libsecp256k1 = "*"
rand_chacha = "0.9.0"
rocksdb = { version = "*", features = ["multi-threaded-cf"] }
tempfile = "*"
dirs = "*"
tracing-subscriber = "*"

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.87"
exclude = [".github/"]
license = "Apache-2.0"
readme = "README.md"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
