[package]
name = "metis-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tendermint.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
base64.workspace = true
tendermint-rpc.workspace = true
tower-abci.workspace = true
libsecp256k1.workspace = true
rand_chacha.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true

metis-chain.workspace = true
metis-storage.workspace = true
metis-vm.workspace = true
metis-pe.workspace = true
metis-app-options.workspace = true
metis-primitives.workspace = true

serde_with.workspace = true
config.workspace = true
dirs.workspace = true

[lints]
workspace = true
