[package]
name = "metis-chain"
version.workspace = true
edition.workspace = true

[dependencies]
metis-primitives.workspace = true
metis-pe.workspace = true

# Alloy and Revm dependencies
alloy-primitives.workspace = true
alloy-evm.workspace = true
alloy-hardforks.workspace = true
alloy-eips.workspace = true
alloy-sol-types.workspace = true
alloy-genesis.workspace = true
alloy-consensus.workspace = true

revm.workspace = true

# Reth dependencies
reth.workspace = true
reth-chainspec.workspace = true
reth-node-ethereum.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
reth-primitives.workspace = true
reth-tracing.workspace = true
reth-ethereum = { workspace = true, features = ["node", "test-utils"] }
reth-cli-util.workspace = true
reth-chain-state = { workspace = true, features = ["test-utils"] }
reth-primitives-traits.workspace = true
reth-ethereum-primitives.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true

# Alloy OP
alloy-op-evm.workspace = true

# OP Reth dependencies
reth-optimism-cli.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-node = { workspace = true, features = ["js-tracer"] }
reth-optimism-chainspec.workspace = true
reth-optimism-consensus.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-forks.workspace = true

tokio.workspace = true
serde.workspace = true
futures.workspace = true
eyre.workspace = true
actix-web.workspace = true
num_cpus.workspace = true
pretty_assertions.workspace = true
secp256k1.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

# AI Inference dependencies
alith = { workspace = true, optional = true }
tracing.workspace = true
serde_json.workspace = true
futures-util.workspace = true
rand.workspace = true
rand_08.workspace = true
jsonrpsee.workspace = true
tokio-stream.workspace = true

[build-dependencies]
# Reth test dependencies
reth-exex-test-utils.workspace = true
reth-testing-utils.workspace = true
# Revmc dependencies
revmc-build = { workspace = true, optional = true }

[[bin]]
name = "metis"
path = "bin/metis.rs"
doc = false

[[bin]]
name = "op-metis"
path = "bin/op_metis.rs"
doc = false

[features]
default = []

# Note: No jemalloc on Windows
jemalloc = ["reth/jemalloc", "metis-pe/jemalloc"]
optimism = ["metis-pe/optimism"]
compiler = ["metis-pe/compiler", "dep:revmc-build"]
inference = ["dep:alith"]
asm-keccak = [
    "reth-node-core/asm-keccak",
    "reth-primitives/asm-keccak",
    "alloy-primitives/asm-keccak",
    "metis-pe/asm-keccak",
]
