[package]
name = "metis-pe"
edition.workspace = true
version.workspace = true

[features]
optimism = [
  "dep:op-alloy-consensus",
  "dep:op-alloy-network",
  "dep:op-alloy-rpc-types",
  "dep:op-revm"
]
compiler = ["metis-vm/compiler", "dep:revmc-build"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
metis-primitives.workspace = true
metis-vm.workspace = true

# Alloy and Revm dependencies
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-trie.workspace = true
alloy-evm.workspace = true
revm.workspace = true

bitflags.workspace = true
bitvec.workspace = true
dashmap.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
crossbeam.workspace = true

# OP Alloy and OP Revm dependencies
op-alloy-consensus = { version = "0.13.0", optional = true }
op-alloy-network = { version = "0.13.0", optional = true }
op-alloy-rpc-types = { version = "0.13.0", optional = true}
op-revm = { version = "3.0.1", optional = true }

# Reth dependencies
reth-primitives.workspace = true

# jemalloc
tikv-jemallocator = { workspace = true, optional = true }

# Testing
pretty_assertions = "1"

[dev-dependencies]
bincode.workspace = true
criterion.workspace = true
flate2.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[build-dependencies]
revmc-build = { git = "https://github.com/paradigmxyz/revmc", optional = true }

[[bench]]
harness = false
name = "gigagas"
