[package]
name = "metis-pe"
edition.workspace = true
version.workspace = true

[features]
default = ["async-dropper"]

compiler = ["metis-vm/compiler", "dep:revmc-build"]
jemalloc = ["dep:tikv-jemallocator"]
asm-keccak = [
  "reth-primitives/asm-keccak",
  "alloy-primitives/asm-keccak",
  "revm/asm-keccak",
]
async-dropper = []

[dependencies]
metis-primitives.workspace = true
metis-vm.workspace = true

# Alloy and Revm dependencies
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-trie.workspace = true
alloy-evm.workspace = true
revm.workspace = true

bitflags.workspace = true
bitvec.workspace = true
dashmap.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
crossbeam.workspace = true

# OP Alloy and OP Revm dependencies
op-alloy-consensus.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true
op-revm.workspace = true

# Reth dependencies
reth-primitives.workspace = true

# jemalloc
tikv-jemallocator = { workspace = true, optional = true }

# RPC Database
tokio.workspace = true

# Testing
pretty_assertions.workspace = true

[dev-dependencies]
bincode.workspace = true
criterion.workspace = true
flate2.workspace = true
rand = "0.9.0"
rayon.workspace = true
reqwest.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[build-dependencies]
revmc-build = { workspace = true, optional = true }

[[bench]]
harness = false
name = "gigagas"
