[package]
name = "metis-tools"
version.workspace = true
edition.workspace = true

[dependencies]
metis-pe.workspace = true
metis-chain.workspace = true
metis-primitives.workspace = true

alloy-evm.workspace = true
revm.workspace = true
rayon.workspace = true
anyhow.workspace = true
alloy-rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

hex = "0.4.3"
num_cpus = "1.16.0"
indicatif = "0.17"
walkdir = "2.5"
clap = { version = "4.5.36", features = ["derive"] }

hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8"
k256 = { version = "0.13.3", features = ["ecdsa"] }

# Testing
pretty_assertions = "1"

[[bin]]
name = "metis-ethertest"
path = "bins/ethertest/main.rs"
doc = false

[[bin]]
name = "metis-blocktest"
path = "bins/blocktest/main.rs"
doc = false

[features]
compiler = ["metis-pe/compiler"]
