[package]
name = "metis-tools"
version.workspace = true
edition.workspace = true

[dependencies]
metis-pe.workspace = true
metis-chain.workspace = true
metis-primitives.workspace = true

revm = { workspace = true, features = ["alloydb"] }
alloy-evm.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-provider.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
reth-chainspec.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-ethereum-consensus.workspace = true
reth-stages.workspace = true
reth-evm-ethereum.workspace = true

rayon.workspace = true
anyhow.workspace = true
alloy-rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true

hex = "0.4.3"
num_cpus = "1.16.0"
indicatif = "0.17"
walkdir = "2.5"
clap = { version = "4.5.38", features = ["derive"] }

hash-db = "0.15"
plain_hasher = "0.2"
triehash = "0.8"
k256 = { version = "0.13.3", features = ["ecdsa"] }

# Testing
pretty_assertions = "1"

[[bin]]
name = "metis-ethertest"
path = "bins/ethertest/main.rs"
doc = false

[[bin]]
name = "metis-blocktest"
path = "bins/blocktest/main.rs"
doc = false

[[bin]]
name = "metis-blockfetch"
path = "bins/blockfetch/main.rs"
doc = false

[[bin]]
name = "metis-eelstest"
path = "bins/eelstest/main.rs"
doc = false

[features]
compiler = ["metis-pe/compiler"]
