[package]
name = "metis-tools"
version.workspace = true
edition.workspace = true

[dependencies]
metis-pe.workspace = true
metis-chain.workspace = true
metis-primitives.workspace = true

revm = { workspace = true, features = ["alloydb"] }

alloy-evm.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-provider.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

reth-chainspec.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-ethereum-consensus.workspace = true
reth-stages.workspace = true
reth-evm-ethereum.workspace = true

rayon.workspace = true
anyhow.workspace = true
alloy-rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true

hex.workspace = true
num_cpus.workspace = true
indicatif.workspace = true
walkdir.workspace = true
clap.workspace = true
indexmap.workspace = true

hash-db.workspace = true
plain_hasher.workspace = true
triehash.workspace = true
k256.workspace = true
either.workspace = true

# Testing
pretty_assertions.workspace = true

[[bin]]
name = "metis-ethertest"
path = "bins/ethertest/main.rs"
doc = false

[[bin]]
name = "metis-blocktest"
path = "bins/blocktest/main.rs"
doc = false

[[bin]]
name = "metis-blockfetch"
path = "bins/blockfetch/main.rs"
doc = false

[[bin]]
name = "metis-blocktrace"
path = "bins/blocktrace/main.rs"
doc = false

[[bin]]
name = "metis-eelstest"
path = "bins/eelstest/main.rs"
doc = false

[features]
compiler = ["metis-pe/compiler"]
