[package]
name = "metis-vm"
version.workspace = true
edition.workspace = true

[dependencies]
metis-primitives.workspace = true
metis-vm-lib.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
revm.workspace = true
reth.workspace = true

revmc = { workspace = true, optional = true }
smallvec.workspace = true
libloading.workspace = true
alith = { workspace = true, optional = true }
moka.workspace = true

serde.workspace = true
async-trait.workspace = true
tracing.workspace = true

[build-dependencies]
revmc-build = { workspace = true, optional = true }

[features]
compiler = ["dep:revmc", "dep:revmc-build"]
inference = ["dep:alith"]

[[example]]
name = "interpreter"

[[example]]
name = "aot_compiler"
required-features = ["compiler"]

[[example]]
name = "jit_compiler"
required-features = ["compiler"]

[[example]]
name = "inference"
required-features = ["inference"]
