[package]
name = "metis-vm-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true

metis-primitives.workspace = true
num-derive.workspace = true
thiserror.workspace = true

[lints]
workspace = true
